test/fail/match_float00.v3
//@execute 0=true; 1=true; -99=true; -2147483648=true; 2147483647=false
def main(i: int) -> bool {
	match (i) {
		x: float => return true;
		_ => return false;
	}
}
